# SenToAni

./: .gitignore  Cargo.toml  README.md  build.rs
example/subtitles/: sample.srt
src/: gl_utils.rs  main.rs  player.rs  scene.slint
src/player/: subtitles.rs
src/shaders/rgb/: fragment.glsl
src/shaders/yuv/: fragment.glsl  vertex.glsl
